# Achilles-Tendon-Load-using-OpenSim

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/grouvel_processed/: subjects.csv
demo/: realtime_demo.html
scripts/: download_data.py  grouvel_harvest.py  grouvel_opensim.py  grouvel_prep.py  grouvel_pressure.py  run_all.py  run_calibration.py  run_data_efficiency.py  run_model_comparison.py  run_moment_arm_sensitivity.py  run_realtime_demo.py  run_robustness.py  run_speed_generalization.py  run_stage1_analytical.py  run_stage2_pinn.py  run_stage3_opensim.py  run_stage4_product.py  run_uncertainty.py  run_walking_vs_running.py
src/achilles/: config.py
src/achilles/biomech/: achilles.py  moment_arm.py  sensitivity.py  tendon.py
src/achilles/data/: base.py  factory.py  fukuchi.py  grouvel.py  synthetic.py  trial.py  walking.py
src/achilles/ml/: baselines.py  calibration.py  cross_val.py  data_efficiency.py  dataset.py  evaluation.py  features.py  generalization.py  losses.py  network.py  robustness.py  trainer.py  uncertainty.py
src/achilles/opensim_xcheck/: pipeline.py
src/achilles/product/: load_index.py  realtime.py
src/achilles/viz/: dashboard.py  plots.py  style.py
tests/: test_biomech.py  test_calibration.py  test_data.py  test_data_efficiency.py  test_evaluation.py  test_generalization.py  test_grouvel.py  test_product.py  test_realtime.py  test_robustness.py  test_tendon.py  test_uncertainty.py  test_walking.py
